[gd_scene load_steps=3 format=3 uid="uid://blg76ky42ebxt"]

[ext_resource type="Script" path="res://scripts/bridge_breaker.gd" id="1_ubf51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsygi"]

[node name="Bridge breaker" type="Area2D"]
script = ExtResource("1_ubf51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dsygi")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
